fixed evaluation, alpha-beta but slower code